--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
         "@testing-library/user-event": "^13.5.0",
         "autoprefixer": "^10.4.13",
         "boxicons": "^2.1.4",
+        "framer-motion": "^10.0.0",
         "jquery": "^3.6.3",
         "postcss": "^8.4.21",
         "react": "^18.2.0",
