--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
+        "@headlessui/react": "^1.7.13",
         "@react-google-maps/api": "^2.18.1",
         "@react-icons/all-files": "^4.1.0",
         "@testing-library/jest-dom": "^5.16.5",
